<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/service_multiwindow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/service_multiwindow_desc"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/bkg_dialog"
            android:textColor="@android:color/white"
            android:text="@string/service_disable"/>

        <Button
            android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bkg_dialog"
            android:textColor="@android:color/white"
            android:text="@string/service_enable"/>
    </LinearLayout>
</LinearLayout>
