<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/theme0"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_blossoms"/>

        <ImageView
            android:id="@+id/theme1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_drips"/>

        <ImageView
            android:id="@+id/theme2"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_orange"/>

        <ImageView
            android:id="@+id/theme3"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_dawn"/>

        <ImageView
            android:id="@+id/theme4"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_bland"/>

        <ImageView
            android:id="@+id/theme_custom"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:src="@drawable/bkg_custom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/icons_size"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <SeekBar
            android:id="@+id/bar_scale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:progressBackgroundTint="@android:color/white"
            android:progressDrawable="@drawable/seekbar_custom"
            android:thumb="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background_opacity"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <SeekBar
            android:id="@+id/bar_opacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/seekbar_custom"
            android:thumb="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_app_names"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/switch_thumb_custom"
            android:track="@drawable/switch_track_custom" />
    </LinearLayout>
</LinearLayout>